monticore-generator/src/test/resources/cocos/invalid/A2106/A2106b.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A2106;

grammar A2106b {
  external A;

  abstract B implements A;

}

